# proto-c

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
includes/: proto.c  proto.h
src/: client.c  main.c  server.c
